tests/PSRule.Rules.Kubernetes.Tests/Resources.AKS.yaml
#
# Kubernetes Service resources for unit tests
#

---
# An example service that should pass all rules.
apiVersion: v1
kind: Service
metadata:
  name: service-A
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: app-A

---
# This service should fail Kubernetes.AKS.PublicLB
apiVersion: v1
kind: Service
metadata:
  name: service-B
spec:
  type: LoadBalancer
  ports:
  - port: 6379
  selector:
    app: app-B

---
# This service should pass Kubernetes.AKS.PublicLB
apiVersion: v1
kind: Service
metadata:
  name: service-C
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 6379
  selector:
    app: app-C
