tests/PSRule.Rules.Kubernetes.Tests/Resources.API.yaml
#
# Kubernetes Pod resources for unit tests
#

---
# An example deployment that should pass all rules.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-A
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-A
  template:
    metadata:
      labels:
        app: app-A
    spec:
      containers:
      - name: app-a
        image: app-a-image:v1
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 80

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deployment-B
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-B
  template:
    metadata:
      labels:
        app: app-B
    spec:
      containers:
      - name: app-b
        image: app-b-image
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-A
spec: {}

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-B
spec: {}
